--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Data Exploration Blog"
 # TODO: write your restaurateur alter ego name below, or your own name
 author: 
-# TODO: write your Google Analytics tracking ID below
+# TODO: write your Google Anal][hg tf0r9d8ytics tracking ID below
 google_analytics: G-WG1KSLECMJ
 
 theme: minima
